refactor: enhance code structure and readability across multiple classes